--- a/src/tokens/design-tokens.css
+++ b/src/tokens/design-tokens.css
@@ -398,7 +398,7 @@
   --components-tokens--button--outline-color--focus: var(--system-tokens--colors--borders--strong);
   --components-tokens--button--border-radius--large: var(--system-tokens--border-radius--xs);
   --components-tokens--button--border-radius--small: var(--system-tokens--border-radius--xs);
-  --components-tokens--button--border-color--secondary--default: var(--system-tokens--colors--borders--neutral);
+  --components-tokens--button--border-color--secondary--default: var(--system-tokens--colors--borders--strong);
   --components-tokens--button--border-color--secondary--hover: var(--system-tokens--colors--borders--strong);
   --components-tokens--button--border-color--secondary--acctived: var(--system-tokens--colors--borders--strong);
   --components-tokens--button--border-color--secondary--disabled: var(--system-tokens--colors--borders--disabled);
@@ -652,7 +652,7 @@
   --components-tokens--badge--typography--letter-spacing: 0.08px;
   --components-tokens--badge--typography--font-family: var(--system-tokens--typography--font-family--alternative-text);
   --components-tokens--badge--typography--font-weight: var(--system-tokens--typography--font-weight--moderate);
-  --components-tokens--badge--text-color--accent: var(--system-tokens--colors--complementary--principal);
+  --components-tokens--badge--text-color--accent: var(--system-tokens--colors--complementary--subtle);
   --components-tokens--badge--border-color--accent: var(--system-tokens--colors--complementary--principal);
 
   /* Typography */
@@ -1360,7 +1360,7 @@
   --system-tokens--colors--primary--off: #F5F5F5;
   --system-tokens--colors--primary--high: #292929;
   --system-tokens--colors--complementary--principal: #F7DF1D;
-  --system-tokens--colors--complementary--subtle: #A3CC00;
+  --system-tokens--colors--complementary--subtle: #313D00;
   --system-tokens--colors--complementary--off: #FBFFEB;
   --system-tokens--colors--complementary--high: #313D00;
   --system-tokens--colors--neutral--principal: #454545;
